--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ main {
     font-size: 1.8em;
     font-weight: bold;
     margin-bottom: 10px;
-    color: #ffcc00;
+    color: #10B981;
 }
 
 /* 갤러리 */
@@ -125,3 +125,4 @@ footer {
         grid-template-columns: 1fr;
     }
 }
+
